Prevent horizontal overflow on narrow screens (#24)
* Remove unnecessary negative margin on small screens

* Allow soft line breaks within words on tiny screens

--- a/styles/global.css
+++ b/styles/global.css
@@ -2,3 +2,9 @@ body {
   overflow-x: hidden;
   margin: 0;
 }
+
+@media (max-width: 18em) {
+  body {
+    word-break: break-all;
+  }
+}
